--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "node_modules": true,
     ".eslintrc.js": true,
     ".vscode": true,
-    "README.md": true
+    "README.md": true,
+    "dist": true
   }
 }
